~ Tweaked Ajax call to get specific movie information + Added movie model to store movie information locally + Functionality for creating reviews

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -13,12 +13,12 @@
 			<%= @response %>
 		</div>
 		<div class='col col-md-4'>
+			<h3> Now playing </h3>
 			<table class="table" id="movieList">
 	    		<thead>
 	        		<tr>
 	            		<th>Title</th>
-	            		<th>Date</th>
-	            		<th>Genre</th>
+	            		<th>Review</th>
 	        		</tr>
 	    		</thead>
 	    		<tbody>
