--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,2 +1,41 @@
-<h1>Reviews#new</h1>
-<p>Find me in app/views/reviews/new.html.erb</p>
+<div class="container">
+
+	<div class="row">
+		<h2> Leave a review for <span id="movieName"> <%= params[:id]%> </span></h2>
+	</div>
+</div>
+
+
+<div class="container">
+	<div class="row">
+		<div class="panel panel-default">
+		    <div class="panel-heading">Write a review!</div>
+		    <div class="panel-body">
+		    <%= form_for @review do |f|%>
+		        <div class="form-group">
+		        <%= f.label :comment %>
+		        <%= f.text_field(:comment, class:"form-control") %> 
+		        </div>
+		        <div class="form-group">
+		        <%= f.label :rating %>
+		        <%= f.number_field(:rating, class:"form-control") %> 
+		        </div>
+		        <div class="form-group">
+		        <%= f.label :first_name %>
+		        <%= f.text_field(:first_name, class:"form-control") %> 
+		        </div>
+		        <div class="form-group">
+		        <%= f.label :last_name %>
+		        <%= f.text_field(:last_name, class:"form-control") %> 
+		        </div>
+		        <div class="form-group">
+		        <%= f.label :email %>
+		        <%= f.text_field(:email, class:"form-control") %> 
+		        </div>
+            <%= f.hidden_field :movie_id, value: params[:id] %>
+		        <%= f.submit class: "btn btn-default" %>
+		    <% end %>
+		    </div>
+		</div>
+	</div>
+</div>
