--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -5,14 +5,46 @@
 
 <div class="container">
 	<div class="row">
-		<div class='col col-md-8'>
-			<h4> This is the request </h4>
-			<%= @request %>
-
-			<h4> This is the response </h4>
-			<%= @response %>
+		<div class='col col-md-8 col-left'>
+			<div class="container container-left">
+				<% @movielist.each do |movie, url, reviews| %>
+				<div class="row movie-node">
+					<div class="col col-md-4">
+						<div class="movieicon"><%= image_tag "movie.png" %> </div>
+					</div>
+					<div class="col col-md-8">
+						<h3> <a href=<%= url %>> <%= movie.title %> </a> </h3>
+						<div> <b> Release Date: </b> <%= movie.release_date.to_date%> </div>
+						<div> <b> Genre: </b> <%= movie.genre %> </div>
+						<b> Reviews: </b>
+						<% reviews.each do |review| %>
+							<p> <%= review.rating %>/5 <%= review.comment %> - <%= review.first_name %> 
+								<% review.last_name %> </p>
+						<% end %>
+					</div>
+				</div>
+				<% end %>
+			</div>
 		</div>
-		<div class='col col-md-4'>
+		<div class='col col-md-4 col-right'>
+			<h3> Recent Review </h3>
+			<table class="table">
+	    		<thead>
+	        		<tr>
+	            		<th>Review</th>
+	            		<th>Rating</th>
+	        		</tr>
+	    		</thead>
+	    		<tbody>
+	    			<% @reviewlist.each do |review, title| %>
+	    				<tr>
+	    					<td> <%= review.comment %> <br> <%= title %> </td>
+	    					<td> <%= review.rating %>/5 </td>
+	    				</tr>
+	    			<% end %>
+	    		</tbody>
+			</table>
+			<a> <%= link_to "View all reviews", reviews_path %> </a>
 			<h3> Now playing </h3>
 			<table class="table" id="movieList">
 	    		<thead>
@@ -26,6 +58,10 @@
 			</table>
 		</div>
 	</div>
+</div>
+
+<div class="container">
+	<a href='https://icons8.com/license'> Icons provided by Icon8</a>
 </div>
 
 
