--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,5 +1,11 @@
 <div class="container">
 	<h1> Reviewster</h1>
+	<% if notice %>
+	  <p class="alert alert-success"><%= notice %></p>
+	<% end %>
+	<% if alert %>
+	  <p class="alert alert-danger"><%= alert %></p>
+	<% end %>
 </div>
 
 
@@ -8,11 +14,10 @@
 				Sort by: <button> <%= link_to "Title", root_path(:sort => 'title')%> </button>
 					 <button> <%= link_to "Release Date", root_path(:sort => 'date') %> </button>
 			 		 <button> <%= link_to "Genre", root_path(:sort => 'genre')%> </button>
-	<div class="row">
+	</div>
 	<div class="row">
 		<div class='col col-md-8 col-left'>
 			<div class="container container-left">
-
 				<% @movielist.each do |movie, url, reviews| %>
 				<div class="row movie-node">
 					<div class="col col-md-4">
