+ Added specs + Added edge case when the third party db goes down + Added validations for movie

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -50,7 +50,7 @@
 	    		<tbody>
 	    			<% @reviewlist.each do |review, title| %>
 	    				<tr>
-	    					<td> <%= review.comment %> <br> <%= title %> </td>
+	    					<td> <b> <%= title %>  </b> <br> <%= review.comment %> </td>
 	    					<td> <%= review.rating %>/5 </td>
 	    				</tr>
 	    			<% end %>
