+ Added email on the UI

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -18,6 +18,7 @@
 	              <div class="rating"> <b> Rating: </b> <%= review.rating %>/5 </div> <br>
 	              <div class="comment"> <%= review.comment %> </div>
 	              <div class="name"> <b> Author: </b> <%= review.first_name %> <%= review.last_name %> </div>
+                <div class="email"> <%= review.email %> </div>
 	              <div class="date"> <%= review.created_at.to_date %> </div>
 	            </td> 
 	        </tr>
